# Microbiome-Modelling

./: .gitignore  README.md  dataloader_simplified.py  experiment_log_20251121_163001_small_test.txt  experiment_log_20251124_110201.txt  main.py  model.py  mystery.txt  pyproject.toml  run_baselines.sh  run_main_evals.sh  run_mlp_baselines.sh  todo.txt  train_funcs.py
scripts/: explore_debug.py  plot_scratch_token_sweeps.py  utils.py
scripts/IBS/: predict_ibs.py  results_large.txt
scripts/cancer/: predict_cancer.py
scripts/checks/: check_ibs_country_counts.py  check_random_text_effect_for_checkpoint.py  check_text_effect_for_checkpoint.py  compare_text_effect_colonisation.py  compare_text_effect_dropout.py  compare_text_projection_weights.py  explore_microbeatlas_maps.py  extract_baseline_results.py  extract_main_eval_results.py  paper_ibs_infants_text_summary.py  random_text_token_sweep_diabimmune.py  random_token_sweep_dropout.py  summarise_dropout_col_datasets.py  surgical_text_dropout_tests.py  text_plus_zero_token_sweep_dropout.py  zero_token_sweep_dropout.py
scripts/colorectal_cancer/: predict_crc.py
scripts/diabimmune/: base_lines_mlp.py  baselines_binary_taxa.py  baselines_colonisation.py  colonisation_test.py  dropout_test.py  plot_diabimmune_attractor_analysis.py  plot_diabimmune_embedding_metadata_panels.py  plot_diabimmune_embedding_metadata_panels_with_rollouts.py  plot_diabimmune_rollout_trajectories_counts_stability.py  plot_diabimmune_trajectory_overlay.py  predict_hla.py  predict_milk.py  prepping_code.py  utils.py
scripts/gingivitis/: utils.py  (+9 more)
(+53 files in other folders)
